code/dotnet/InvestmentResearch/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Investment Research client library for .NET

[![API Version](https://img.shields.io/badge/api-v1.1.0-blue)](https://developer.factset.com/api-catalog/investment-research-api)
[![Nuget](https://img.shields.io/badge/nuget-v2.0.0-orange)](https://www.nuget.org/packages/FactSet.SDK.InvestmentResearch/2.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)


The Investment Research API provides a comprehensive set of functionalities for searching and retrieving research reports and documents from various contributors.

This API is designed to expose document search and document retrieval functionality. A document search will allow a request to query FactSet document databases based on certain search criteria specified in the request.

FactSet collects research reports and models from brokers, independent research providers, market research firms, rating agencies, and other publishers of research. These documents are processed and made available to clients within about two minutes of receipt.

FactSet delivers this content through the FactSet Research Connect product, which enables real-time research for investment managers entitled by the contributors to access the content, and the Aftermarket Research product, which allows users to purchase research reports via a pool subscription. 

The meta endpoints namely time-zones, categories, research-contributors, research-analysts, security-types and asset-types provide comprehensive lists of data that is used in the research endpoints. Note that research-contributors is applicable to FactSet Research Connect (FRC) contributors only.\"

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.1.0
- SDK version: 2.0.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.InvestmentResearch -v 2.0.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.InvestmentResearch -Version 2.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.InvestmentResearch.Api;
using FactSet.SDK.InvestmentResearch.Client;
using FactSet.SDK.InvestmentResearch.Model;

namespace Example
{
    public static class GetAssetTypesExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.InvestmentResearch.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new MetaApi(config);

            try
            {
                // Returns the codes indicating asset types.
                AssetTypesResponse result = apiInstance.GetAssetTypes();
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling MetaApi.GetAssetTypes: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content/investment-research/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*MetaApi* | [**GetAssetTypes**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/MetaApi.md#getassettypes) | **GET** /meta/asset-types | Returns the codes indicating asset types.
*MetaApi* | [**GetCategories**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/MetaApi.md#getcategories) | **GET** /meta/categories | Returns the categories.
*MetaApi* | [**GetResearchAnalyst**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/MetaApi.md#getresearchanalyst) | **GET** /meta/research-analysts | Returns the research analysts' details.
*MetaApi* | [**GetResearchContributor**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/MetaApi.md#getresearchcontributor) | **GET** /meta/research-contributors | Returns the research contributors' details.
*MetaApi* | [**GetSecurityTypes**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/MetaApi.md#getsecuritytypes) | **GET** /meta/security-types | Returns the codes indicating security types.
*MetaApi* | [**GetTimezones**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/MetaApi.md#gettimezones) | **GET** /meta/time-zones | Returns the time zones.
*ResearchApi* | [**GetCount**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/ResearchApi.md#getcount) | **POST** /count | Returns the count of documents for specified source.
*ResearchApi* | [**GetInvestmentResearchData**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/ResearchApi.md#getinvestmentresearchdata) | **POST** /search | Retrieve investment research documents and related metadata within FactSet coverage.
*ResearchApi* | [**GetPurchaseLinks**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/ResearchApi.md#getpurchaselinks) | **POST** /purchase-amr | Retrieve purchase links and metadata for specified research documents.


## Documentation for Models

 - [Model.AssetResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/AssetResponse.md)
 - [Model.AssetTypesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/AssetTypesResponse.md)
 - [Model.CategoriesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/CategoriesResponse.md)
 - [Model.CategoriesResponseObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/CategoriesResponseObject.md)
 - [Model.CountRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/CountRequest.md)
 - [Model.CountRequestBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/CountRequestBody.md)
 - [Model.CountResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/CountResponse.md)
 - [Model.CountResponseObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/CountResponseObject.md)
 - [Model.CountSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/CountSource.md)
 - [Model.Document](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/Document.md)
 - [Model.ErrorExample](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/ErrorExample.md)
 - [Model.ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/ErrorResponse.md)
 - [Model.InvalidIdErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/InvalidIdErrorObject.md)
 - [Model.InvestmentResearchResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/InvestmentResearchResponse.md)
 - [Model.InvestmentResearchResponseItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/InvestmentResearchResponseItems.md)
 - [Model.InvestmentResearchResponseMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/InvestmentResearchResponseMeta.md)
 - [Model.InvestmentResearchResponseMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/InvestmentResearchResponseMetaPagination.md)
 - [Model.PurchaseDocument](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/PurchaseDocument.md)
 - [Model.PurchaseRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/PurchaseRequest.md)
 - [Model.PurchaseRequestBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/PurchaseRequestBody.md)
 - [Model.PurchaseResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/PurchaseResponse.md)
 - [Model.PurchaseResponseItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/PurchaseResponseItems.md)
 - [Model.ResearchAnalystResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/ResearchAnalystResponse.md)
 - [Model.ResearchAnalystResponseObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/ResearchAnalystResponseObject.md)
 - [Model.ResearchContributorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/ResearchContributorResponse.md)
 - [Model.ResearchContributorResponseObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/ResearchContributorResponseObject.md)
 - [Model.SearchRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/SearchRequest.md)
 - [Model.SearchRequestBody](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/SearchRequestBody.md)
 - [Model.SearchRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/SearchRequestMeta.md)
 - [Model.SearchRequestMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/SearchRequestMetaPagination.md)
 - [Model.SecurityResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/SecurityResponse.md)
 - [Model.SecurityTypesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/SecurityTypesResponse.md)
 - [Model.TimeZoneResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/TimeZoneResponse.md)
 - [Model.TimeZonesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentResearch/v1/docs/TimeZonesResponse.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
